# RandoScrapper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml
data/: hikes.db
rando_scrapper/: __init__.py  filtering.py  scraper.py
scripts/: run_scraper.py
