[tool.poetry]
name = "rando-scrapper"
version = "0.0.1"
description = "Scrape randoromandie.com hikes and browse with multi-filter support"
authors = ["Oscar Jenot"]
readme = "README.md"
packages = [{ include = "rando_scrapper" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
streamlit = "^1.29.0"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.6.1"
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 88
extend-exclude = ["/.venv", "/venv", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = ["E501", "B905", "B008", "E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
